Fix grouping of messages in 'most recent' mode

Let ThreadGrouperComparator handle the grouper string, since
it knows what are the thread leader and the most recent items in
a thread.

BUG: 262735